--- a/docker/ny_times/dockerfile
+++ b/docker/ny_times/dockerfile
@@ -1,4 +1,4 @@
-#inherit homebrew
-FROM golang
-RUN go get -u github.com/gorilla/mux
+#this is a locally hosted image that exists in the docker_go_ruby directory
+FROM docker_go_ruby
+
 CMD git clone https://github.com/jerren1122/go_ny_times_api.git; cd go_ny_times_api; go build; ./go_ny_times_api;
